--- a/css/styles.css
+++ b/css/styles.css
@@ -619,8 +619,8 @@ address {
     left:0;
     height: 100%;
     width: 100%;
-    opacity: 0;
-    pointer-events: none;
+    opacity: 1;
+    pointer-events: auto;
     z-index: 999;
     display: flex;
     justify-content: center;
