--- a/css/styles.css
+++ b/css/styles.css
@@ -619,8 +619,8 @@ address {
     left:0;
     height: 100%;
     width: 100%;
-    opacity: 1;
-    pointer-events: auto;
+    opacity: 0;
+    pointer-events: none;
     z-index: 999;
     display: flex;
     justify-content: center;
@@ -664,7 +664,7 @@ address {
 .closing-button:hover{
     background-color: #404BBF;
     border: none;
-    fill:#FFFFFF;
+    fill: #ffffff
 }
 .closing-button:focus{
     background-color: #404BBF;
@@ -752,6 +752,7 @@ address {
             background-color: transparent;
             outline: transparent;
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            padding: 8px 16px;
 }
 .comment-input:focus{
 border: 1px solid #4D5AE5;
@@ -814,23 +815,18 @@ fill: transparent;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.right-part{
-    display: flex;
-    gap: 24px;
-    align-items: flex-end;
 
-}
-.subscribe{
-    margin-left:80px;
-}
 .email-sub{
     height: 40px;
     width: 264px;
-    padding: 8px 16px 8px;
+padding-left: 16px;
     background-color:transparent;
     color:#FFFFFF;
     border-radius: 4px;
-     border: 1px solid var(--WHITE, #FFF);
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+     border: 1px solid  #FFFFFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     
 }
@@ -840,22 +836,44 @@ fill: transparent;
 .subs-text{
     color:#FFFFFF;
     margin-bottom: 16px ;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+}
+.subscription-form {
+    display: flex;
+    gap: 24px;
+}
+
+.right-part{
+    display: flex;
+    flex-direction: column;
+        margin-left: 80px;
 }
 .button-subsc{
     border-radius: 4px;
         background-color:  #4D5AE5;
-        display: inline-flex;
+        display: flex;
         justify-content: center;
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
         align-items: center;
-            padding: 8px 24px;
             color:#FCFCFC;
-                        gap: 16px;
+            gap: 16px;
             height:40px;
-            width: 165px;
+            max-width: 165px;
             border: none;
+            
 
 
 }
 .paper{
     fill:#FFFFFF;
+    margin-left: 16px;
 }
