--- a/css/styles.css
+++ b/css/styles.css
@@ -665,6 +665,12 @@ address {
     background-color: #404bbf;
     border: none;
 }
+
+.closing-button:hover {
+    background-color: #404BBF;
+    border: none;
+    fill: #FFFFFF;
+}
 .closing-button:focus{
     background-color: #404BBF;
         border: none;
@@ -673,7 +679,7 @@ address {
 .closing-icon{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.closing-icon:hover{
+.closing-icon:hover {
     fill: #FFFFFF;
 }
 .closing-icon:focus{
@@ -795,6 +801,16 @@ fill: transparent;
 .visually-hidden:checked + .policy{
     background-color:#404bbf;
     border: none;
+    fill: #F4F4FD;
+}
+
+input[type="checkbox"]:checked+.accept .policy {
+    background-color: var(--checkbox-bg);
+    border: none;
+
+}
+
+input[type="checkbox"]:checked+.accept .policy .checkbox-icon {
     fill: #F4F4FD;
 }
 .button-send{
