--- a/css/styles.css
+++ b/css/styles.css
@@ -805,8 +805,36 @@ fill: transparent;
     background-color:#404bbf;
     border: none;
     fill: #F4F4FD;
-}g
+}
 
+    .modal-close-btn {
+            display: flex;
+            position: absolute;
+            align-items: center;
+            justify-content: center;
+            top: 24px;
+            right: 24px;
+            width: 24px;
+            height: 24px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            border-radius: 50%;
+            background: #E7E9FC;
+            stroke-width: 1px;
+            stroke: rgba(0, 0, 0, 0.10);
+            line-height: 0;
+            cursor: pointer;
+            padding: 0;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-btn:hover {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
 input[type="checkbox"]:checked+.accept .policy {
     background-color: var(--checkbox-bg);
     border: none;
