--- a/css/styles.css
+++ b/css/styles.css
@@ -611,37 +611,39 @@ address {
 .footer-social {
     fill: #f4f4fd;
 }
-
-.modal-overlay{
-    background-color: rgba(46, 47, 66, 0.40);
+.modal-overlay {
+    background-color: #2e2f4266;
     position: fixed;
-    top:0;
-    left:0;
-    height: 100%;
     width: 100%;
-    opacity: 0;
-    pointer-events: none;
+    height: 100%;
+    top: 0;
+    left: 0;
     z-index: 999;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal{
+
+.modal-overlay.is-open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal-form {
     position: absolute;
     top: 50%;
-        left: 50%;
-    min-height: 584px;
+    left: 50%;
     width: 408px;
-    background-color:#FCFCFC ;
+    min-height: 584px;
     border-radius: 4px;
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-    display: flex;
-    flex-direction: column;
+    padding: 72px 24px 24px 24px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+        0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
     transform: translate(-50%, -50%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
 }
 
 .close-button {
@@ -650,200 +652,167 @@ address {
     right: 24px;
     width: 24px;
     height: 24px;
-    border-radius: 50%;
-    display: flex;
-    fill: #2e2f42;
-    align-items: center;
-    justify-content: center;
-    background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0;
-    cursor: pointer;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    padding: 0;
 }
 
 .close-button:hover,
 .close-button:focus {
     background-color: #404bbf;
-    border:none;
-}
-.text-modal{
-    color: #2E2F42;
-        font-family: Roboto;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        line-height:1.5;
-        letter-spacing: 0.02em;
-        text-align: center;
-        margin-bottom: 16px;
-}
-#user-privacy:checked~label .policy {
-    background-color: #404bbf;
     border: none;
-    fill: #F4F4FD;
 }
-.form-div{
+
+.close-button-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover .close-button-icon,
+.close-button:focus .close-button-icon {
+    fill: #ffffff;
+}
+
+.form-title {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+.form-label-container {
     margin-bottom: 8px;
 }
-.label{
-    color:  #8E8F99;
-        font-family: Roboto;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04em;
-        display: block;
-        margin-bottom: 4px;
+
+.form-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+    display: block;
 }
-.input-form{
-    height: 40px;
-    width: 100%;
-    border-radius: 4px;
-        border: 1px solid rgba(46, 47, 66, 0.4);
-        background-color: transparent;
-        padding-left: 38px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-icon{
+
+.input-with-icon {
     position: relative;
 }
-.input-form:focus{
-    border-color: #4D5AE5;
+
+.form-input,
+.form-input-checkbox {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding-left: 38px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.name-icon{
+
+.form-input:hover,
+.form-input:focus-within {
+    border-color: #4d5ae5;
+}
+
+.form-icon {
     position: absolute;
     left: 16px;
     top: 50%;
+    fill: #2e2f42;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill:#434455;
 }
-.input-form:focus+.name-icon {
-    fill: #4D5AE5;
+
+.form-label-container:hover .form-icon,
+.form-label-container:focus-within .form-icon {
+    fill: #4d5ae5;
 }
-.comment-block{
+
+.form-comment-label-container {
     margin-bottom: 16px;
 }
-.comment-input{
-    width: 100%;
-    height: 120px;
+
+.form-input.comment {
     resize: none;
-    color: rgba(46, 47, 66, 0.40);
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04em;
-        padding-top: 8px;
-        padding-left: 16px;
-        border-radius: 4px;
-            border: 1px solid rgba(46, 47, 66, 0.40);
-            background-color: transparent;
-            outline: transparent;
-            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            padding: 8px 16px;
-}
-.comment-input:focus{
-border: 1px solid #4D5AE5;
-}
-.checkbox-cont{
-    margin-bottom: 24px ;
-}
-.accept{
-    color: #8E8F99;
-        font-family: Roboto;
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.17;
-        letter-spacing: 0.04em;
-}
-.policy {
-    width: 16px;
-    height:16px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
-align-items: center;
-justify-content: center;
-fill: transparent;
-
-}
-.checkbox-icon{
-    fill:#4D5AE5;
+    height: 120px;
+    width: 100%;
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 
+.container-accept-terms {
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+}
 
-.posil{
-    color:#4D5AE5;
+.user-privacy-label {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.policy-file {
+    line-height: 1.3;
     text-decoration: underline;
-}
-.visually-hidden:checked .policy{
-    background-color:#404bbf;
-    border: none;
-    fill: #F4F4FD;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
 }
 
-    .modal-close-btn {
-            display: flex;
-            position: absolute;
-            align-items: center;
-            justify-content: center;
-            top: 24px;
-            right: 24px;
-            width: 24px;
-            height: 24px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            border-radius: 50%;
-            background: #E7E9FC;
-            stroke-width: 1px;
-            stroke: rgba(0, 0, 0, 0.10);
-            line-height: 0;
-            cursor: pointer;
-            padding: 0;
-            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.check-span {
+    width: 16px;
+    height: 16px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    border: 1px solid #2e2f4266;
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn:hover {
+
+.form-input-checkbox:checked+.user-privacy-label .check-span {
     background-color: #404bbf;
     border: none;
+    fill: #f4f4fd;
 }
 
-.modal-close-btn:hover .closing-icon,
-.modal-close-btn:focus .closing-icon {
-    fill: #ffffff;
-}
-input[type="checkbox"]:checked+.accept .policy {
-    background-color: var(--checkbox-bg);
-    border: none;
-
-}
-
-input[type="checkbox"]:checked+.accept .policy .checkbox-icon {
-    fill: #F4F4FD;
-}
-
-
-input[type="checkbox"]:checked+.accept .policy {
-    background-color: var(--checkbox-bg);
-    /* Background color when checked */
-    border: none;
-    /* Remove border when checked */
+.form-button {
+    color: white;
+    background-color: #4d5ae5;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    border-radius: 4px;
+    border: 0;
+    min-width: 169px;
+    height: 56px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-input[type="checkbox"]:checked+.accept .policy .checkbox-icon {
-    fill: var(--icon-fill);
-    /* Icon fill color when checked */
-}
-
-/* Alternatively using a different selector */
-input#user-privacy:checked~.accept .policy .checkbox-icon {
-    fill: var(--icon-fill);
-    /* Icon fill color when checked */
+.form-button:hover,
+.form-button:focus {
+    background-color: #404bbf;
 }
 
 .button-send{
