--- a/css/styles.css
+++ b/css/styles.css
@@ -809,7 +809,10 @@ address {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-overlay.is-open {
+    opacity: 1;
+    pointer-events: auto;
+}
 .form-button:hover,
 .form-button:focus {
     background-color: #404bbf;
